--- a/scripts/style.css
+++ b/scripts/style.css
@@ -26,7 +26,7 @@
     right: 0;
     text-align: center;
     text-decoration: underline;
-    color: white;
+    color: azure;
 }
 /*Blurred Background*/
 .blurred-bg{
