--- a/scripts/style.css
+++ b/scripts/style.css
@@ -35,10 +35,10 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-   	background: url('https://raw.githubusercontent.com/RJgTH/innovationFest2020/master/assets/Innovation_group.png') no-repeat center center;
+    background: url('https://raw.githubusercontent.com/RJgTH/innovationFest2020/master/assets/Innovation_group.png') no-repeat center center;
 	background-size: cover;
-	-webkit-filter: blur(1.5px);
-    	filter: blur(1.5px);
+	-webkit-filter: brightness(50%) contrast(87%) blur(1.5px);
+    filter: brightness(50%) contrast(87%) blur(1.5px);
 }
 
 /*Footer*/
@@ -50,4 +50,10 @@
     background: rgba(58, 57, 63, 0.6);
     color: white;
     text-align: center;
+}
+
+/* Image filter cause I'm too lazy to open photoshop and change it too white from blue :p */
+.main-content .white{
+    filter: invert(100%) sepia(99%) saturate(0%) hue-rotate(323deg) brightness(104%) contrast(100%);
+    /* Thanks https://codepen.io/sosuke/pen/Pjoqqp */
 }
