--- a/scripts/style.css
+++ b/scripts/style.css
@@ -52,7 +52,7 @@
     text-align: center;
 }
 
-/* Image filter cause I'm too lazy to open photoshop and change it too white from blue :p */
+/* Image filter cause I'm too lazy to open photoshop and change it to white from blue :p... */
 .main-content .white{
     filter: invert(100%) sepia(99%) saturate(0%) hue-rotate(323deg) brightness(104%) contrast(100%);
     /* Thanks https://codepen.io/sosuke/pen/Pjoqqp */
